--- a/accueil.html
+++ b/accueil.html
@@ -57,67 +57,23 @@
     </header>
     <main>
         <section id="about">
-            <div class="container row">
+            <div class="container col">
                 <div class="image-container">
-                    <img data-aos="fade-right" data-aos-delay="500" data-aos-easing="ease-in-out" class="left-side"
-                        src="./assets/images/lili.png" alt="Photo de profile du photographe Aurélie Lhuillier">
+                    <!-- <img data-aos="fade-right" data-aos-delay="500" data-aos-easing="ease-in-out" class="left-side"
+                        src="./assets/images/lili.png" alt="Photo de profile du photographe Aurélie Lhuillier"> -->
                 </div>
 
                 <div class="right-side col">
-                    <h2 data-aos="zoom-in">Mon Histoire</h2>
-                    <p data-aos="fade-up">Bonjour, je m’appelle aurélie, je suis originaire de LYON, là- bas j’y ai
-                        suivi des études d’intermittente
-
-                        du spectacle, j’ai appris le maquillage cinéma, théâtre, mode, beauté ainsi que toutes les
-                        coiffures de
-
-                        1800 à nos jours, j’ai appris les effets spéciaux et la fabrication de perruques.
-
-                        Arrivée dans le var, j’ai travaillé dans le médical tout en continuant mon métier de
-                        maquilleuse,
-
-                        coiffeuse pour les mariages ou occasionnellement à l’opéra de Toulon.
-
-                        J’aime la photographie depuis des années et dernièrement j’ai décidé de ma lancer en tant que
-
-                        professionnel et j’ai donc suivi une formation à l’école FORMA PHOTO PACA au Lavandou.
-
-                        C’était mon rêve de devenir photographe et de pouvoir vivre de ma passion. J’aime l’histoire qui
-                        se
-
-                        cache derrière les photos et rappelle immédiatement l’esprit de ce moment figé.
-
-                        Les photos de famille, bébé, mariage, les paysages, les animaux, sont des instants de bonheurs
-                        qui se
-
-                        partage et pour lequel on laisse une trace pour les générations à venir.
-
-                        Des photos de bonheur mais également des photos de tristesse ou j’accompagne des familles pour
-
-                        des fins de vies, des moments particuliers que certains veulent garder.
-
-                        La photo est une technologie incroyable, cette boîte magique qui saisit tant d’émotions, c’est
-                        la
-
-                        magie que je souhaite faire ressortir dans mon travail, mon travail de prise de vue, de retouche
-                        et de
-
-                        création.
-
-                        Je peux vous aider à aller jusqu’au bout de vos projets en cumulant mes deux métiers, je vous
-                        aide à
-
-                        réaliser vos envies.
-
-                        Je suis à l’écoute de tous vos projets…
-
+                    <p data-aos="fade-up">
+                        <h3 style="cursor: pointer;"><div class="animLayer"></div>Découvrez mon histoire</h3>
                     </p>
 
+                    <div class="btn-container row" style="gap: 40px;">
+                        <a data-aos="zoom-in" class="button" href="#gallery">Mon travail</a>
+                        <a data-aos="zoom-in" class="button" href="#contact">Me Contacter</a>
+                    </div>
+
                 </div>
-            </div>
-            <div class="btn-container row" style="gap: 40px;">
-                <a data-aos="zoom-in" class="button" href="#gallery">Mon travail</a>
-                <a data-aos="zoom-in" class="button" href="#contact">Me Contacter</a>
             </div>
         </section>
 
@@ -126,7 +82,6 @@
                 <h2>Galeries</h2>
                 <ul>
                     <li>
-                        <div class="layer"></div>
                         <img src="./assets/images/1.JPG"
                             alt="Image de présentation du travail du photographe">
                     </li>
