--- a/accueil.html
+++ b/accueil.html
@@ -29,7 +29,16 @@
                     <li><a class="nav-link" href="#about">A Propos</a></li>
                     <li><a class="nav-link" href="#gallery">Galeries</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
-                    <li><a class="nav-link" href="#">Tarifs</a></li>
+                    <li class="sub-link">
+                        <div class="sub col">
+                            <a class="nav-link" href="#">Tarifs</a>
+                            <div class="content col">
+                                <a href="#!">Enfant / bébé</a>
+                                <a href="#!">Marriage</a>
+                                <a href="#!">Grosesse</a>
+                            </div>
+                        </div>
+                    </li>
 
                     <div id="header-bottom-mobile">
                         <div class="row">
@@ -59,17 +68,17 @@
         <section id="about">
             <div class="container col">
                 <div class="image-container">
-                    <!-- <img data-aos="fade-right" data-aos-delay="500" data-aos-easing="ease-in-out" class="left-side"
-                        src="./assets/images/lili.png" alt="Photo de profile du photographe Aurélie Lhuillier"> -->
+                    <img data-aos="fade-right" data-aos-delay="500" data-aos-easing="ease-in-out" class="left-side"
+                        src="./assets/images/lili.png" alt="Photo de profile du photographe Aurélie Lhuillier">
                 </div>
 
+                <p data-aos="fade-up">
+                    <h3 data-aos="fade-left" data-aos-delay="800" data-aos-easing="ease-in" style="cursor: pointer;"></h3>
                 <div class="right-side col">
-                    <p data-aos="fade-up">
-                        <h3 style="cursor: pointer;"><div class="animLayer"></div>Découvrez mon histoire</h3>
                     </p>
 
-                    <div class="btn-container row" style="gap: 40px;">
-                        <a data-aos="zoom-in" class="button" href="#gallery">Mon travail</a>
+                    <div data-aos="fade-right" data-aos-delay="900" data-aos-easing="ease-in-out" class="btn-container row" style="gap: 40px;">
+                        <a data-aos="zoom-in" class="button" href="#gallery">Mon Travail</a>
                         <a data-aos="zoom-in" class="button" href="#contact">Me Contacter</a>
                     </div>
 
