--- a/accueil.html
+++ b/accueil.html
@@ -11,9 +11,13 @@
 </head>
 
 <body>
+    <div class="slider row">
+        <img src="./assets/images/logo.PNG" alt="logo">
+        <img src="./assets/svg/camera.svg" alt="logo">
+    </div>
     <header>
-
         <button onclick="topFunction()" id="scroll-back">↑</button>
+
         <div class="container">
             <nav class="row">
                 <div id="header-top">
@@ -73,7 +77,7 @@
                 </div>
 
                 <p data-aos="fade-up">
-                    <h3 data-aos="fade-left" data-aos-delay="800" data-aos-easing="ease-in" style="cursor: pointer;"></h3>
+                    <h3 onclick="moveToAbout()" data-aos="fade-left" data-aos-delay="800" data-aos-easing="ease-in" style="cursor: pointer;"></h3>
                 <div class="right-side col">
                     </p>
 
