--- a/accueil.html
+++ b/accueil.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="slider row">
-        <img src="./assets/images/logo.PNG" alt="logo">
+        <img src="./assets/images/logo.png" alt="logo">
         <img src="./assets/svg/camera.svg" alt="logo">
     </div>
     <header>
@@ -34,14 +34,14 @@
                     <li><a class="nav-link" href="#gallery">Galeries</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="sub-link">
-                        <div class="sub col">
-                            <a class="nav-link" href="#">Tarifs</a>
-                            <div class="content col">
+                        <!-- <div class="sub col"> -->
+                            <a class="nav-link" href="./categories.html">Tarifs</a>
+                            <!-- <div class="content col">
                                 <a href="#!">Enfant / bébé</a>
                                 <a href="#!">Marriage</a>
                                 <a href="#!">Grosesse</a>
-                            </div>
-                        </div>
+                            </div> -->
+                        <!-- </div> -->
                     </li>
 
                     <div id="header-bottom-mobile">
@@ -84,6 +84,7 @@
                     <div data-aos="fade-right" data-aos-delay="900" data-aos-easing="ease-in-out" class="btn-container row" style="gap: 40px;">
                         <a data-aos="zoom-in" class="button" href="#gallery">Mon Travail</a>
                         <a data-aos="zoom-in" class="button" href="#contact">Me Contacter</a>
+                        <a data-aos="zoom-in" class="button" href="./categories.html">Tarifs</a>
                     </div>
 
                 </div>
@@ -95,7 +96,7 @@
                 <h2>Galeries</h2>
                 <ul>
                     <li>
-                        <img src="./assets/images/1.JPG"
+                        <img src="./assets/images/1.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
@@ -103,54 +104,66 @@
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/2.JPG"
+                        <img src="./assets/images/katia.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/4.JPG"
+                        <img src="./assets/images/claudia.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/5.JPG"
+                        <img src="./assets/images/6.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/6.JPG"
+                        <img src="./assets/images/7.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/7.JPG"
+                        <img src="./assets/images/can.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/11.JPG"
-                            alt="Image de présentation du travail du photographe">
-                    </li>
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/9.JPG"
+                        <img src="./assets/images/enfant2.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/8.JPG"
+                        <img src="./assets/images/4.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/3.JPG"
+                        <img src="./assets/images/11.jpg"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+                    <li>
+                        <div class="layer"></div>
+                        <img src="./assets/images/9.jpg"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+
+                    <li>
+                        <div class="layer"></div>
+                        <img src="./assets/images/8.jpg"
+                            alt="Image de présentation du travail du photographe">
+                    </li>
+
+                    <li>
+                        <div class="layer"></div>
+                        <img src="./assets/images/enfant1.jpg"
                             alt="Image de présentation du travail du photographe">
                     </li>
 
