--- a/mon-histoire.html
+++ b/mon-histoire.html
@@ -7,13 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lili Photo</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="./mon-histoire.css">
+    <link rel="stylesheet" href="./css/mon-histoire.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
     <div class="slider row">
-        <img src="./assets/images/logo.PNG" alt="logo">
+        <img src="./assets/images/logo.png" alt="logo">
         <img src="./assets/svg/camera.svg" alt="logo">
     </div>
     <header>
