--- a/accueil.html
+++ b/accueil.html
@@ -11,10 +11,7 @@
 </head>
 
 <body>
-    <div class="slider row">
-        <img src="./assets/images/logo.png" alt="logo">
-        <img src="./assets/svg/camera.svg" alt="logo">
-    </div>
+
     <header>
         <button onclick="topFunction()" id="scroll-back">↑</button>
 
@@ -34,14 +31,7 @@
                     <li><a class="nav-link" href="#gallery">Galeries</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="sub-link">
-                        <!-- <div class="sub col"> -->
-                            <a class="nav-link" href="./categories.html">Tarifs</a>
-                            <!-- <div class="content col">
-                                <a href="#!">Enfant / bébé</a>
-                                <a href="#!">Marriage</a>
-                                <a href="#!">Grosesse</a>
-                            </div> -->
-                        <!-- </div> -->
+                        <a class="nav-link" href="./categories.html">Tarifs</a>
                     </li>
 
                     <div id="header-bottom-mobile">
@@ -71,18 +61,16 @@
     <main>
         <section id="about">
             <div class="container col">
+                <h3 data-aos="fade-left" data-aos-delay="800" data-aos-easing="ease-in" style="cursor: pointer;">Lili Photo</h3>
                 <div class="image-container">
                     <img data-aos="fade-right" data-aos-delay="500" data-aos-easing="ease-in-out" class="left-side"
                         src="./assets/images/lili.png" alt="Photo de profile du photographe Aurélie Lhuillier">
                 </div>
 
-                <p data-aos="fade-up">
-                    <h3 onclick="moveToAbout()" data-aos="fade-left" data-aos-delay="800" data-aos-easing="ease-in" style="cursor: pointer;"></h3>
-                <div class="right-side col">
-                    </p>
-
-                    <div data-aos="fade-right" data-aos-delay="900" data-aos-easing="ease-in-out" class="btn-container row" style="gap: 40px;">
+                    <div data-aos="fade-right" data-aos-delay="900" data-aos-easing="ease-in-out"
+                        class="btn-container row" style="gap: 40px;">
                         <a data-aos="zoom-in" class="button" href="#gallery">Mon Travail</a>
+                        <a data-aos="zoom-in" class="button" href="./mon-histoire.html">Mon Histoire</a>
                         <a data-aos="zoom-in" class="button" href="#contact">Me Contacter</a>
                         <a data-aos="zoom-in" class="button" href="./categories.html">Tarifs</a>
                     </div>
@@ -96,75 +84,63 @@
                 <h2>Galeries</h2>
                 <ul>
                     <li>
-                        <img src="./assets/images/1.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/1.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
 
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/katia.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/katia.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/claudia.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/claudia.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/6.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/6.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/7.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/7.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/can.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/can.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/enfant2.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/enfant2.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/4.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/4.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/11.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/11.jpg" alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/9.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/9.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/8.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/8.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/enfant1.jpg"
-                            alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/enfant1.jpg" alt="Image de présentation du travail du photographe">
                     </li>
 
                 </ul>
@@ -220,8 +196,8 @@
                         </li>
 
 
-                        <li data-aos="fade-right" data-aos-delay="1150"
-                            data-aos-duration="400" data-aos-easing="ease-in-out">
+                        <li data-aos="fade-right" data-aos-delay="1150" data-aos-duration="400"
+                            data-aos-easing="ease-in-out">
                             <img src="./assets/svg/logo-instagram.svg" alt="Icone de résaux sociaux">
                             <div class="contact-wrapper">
                                 Instagram:
