--- a/accueil.html
+++ b/accueil.html
@@ -19,6 +19,7 @@
             <nav class="row">
                 <div id="header-top">
                     <img id="logo" src="./assets/images/home logo.png" alt="Logo du site Aurélie Lhuillier Photographe">
+                    <h3 id="title" data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili Photo</h3>
                     <button onClick="toggleMenu()" id="menu-btn">
                         <span></span>
                         <span></span>
@@ -61,18 +62,17 @@
     <main>
         <section id="about">
             <div class="container col">
-                <h3 data-aos="fade-left" data-aos-delay="800" data-aos-easing="ease-in" style="cursor: pointer;">Lili Photo</h3>
                 <div class="image-container">
-                    <img data-aos="fade-right" data-aos-delay="500" data-aos-easing="ease-in-out" class="left-side"
+                    <img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out" class="left-side"
                         src="./assets/images/lili.png" alt="Photo de profile du photographe Aurélie Lhuillier">
                 </div>
 
-                    <div data-aos="fade-right" data-aos-delay="900" data-aos-easing="ease-in-out"
-                        class="btn-container row" style="gap: 40px;">
-                        <a data-aos="zoom-in" class="button" href="#gallery">Mon Travail</a>
-                        <a data-aos="zoom-in" class="button" href="./mon-histoire.html">Mon Histoire</a>
-                        <a data-aos="zoom-in" class="button" href="#contact">Me Contacter</a>
-                        <a data-aos="zoom-in" class="button" href="./categories.html">Tarifs</a>
+                    <div data-aos="fade-in" data-aos-delay="900" data-aos-easing="ease-in-out"
+                        class="btn-container row">
+                        <a class="button" href="#gallery">Mon Travail</a>
+                        <a class="button" href="./mon-histoire.html">Mon Histoire</a>
+                        <a class="button" href="#contact">Me Contacter</a>
+                        <a class="button" href="./categories.html">Tarifs</a>
                     </div>
 
                 </div>
