--- a/accueil.html
+++ b/accueil.html
@@ -32,7 +32,7 @@
                     <li><a class="nav-link" href="#gallery">Galeries</a></li>
                     <li><a class="nav-link" href="#contact">Contact</a></li>
                     <li class="sub-link">
-                        <a class="nav-link" href="./categories.html">Tarifs</a>
+                        <a class="nav-link" href="./pages/categories.html">Tarifs</a>
                     </li>
 
                     <div id="header-bottom-mobile">
@@ -62,6 +62,7 @@
     <main>
         <section id="about">
             <div class="container col">
+                <h3 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili Photo</h3>
                 <div class="image-container">
                     <img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out" class="left-side"
                         src="./assets/images/lili.png" alt="Photo de profile du photographe Aurélie Lhuillier">
@@ -70,9 +71,9 @@
                     <div data-aos="fade-in" data-aos-delay="900" data-aos-easing="ease-in-out"
                         class="btn-container row">
                         <a class="button" href="#gallery">Mon Travail</a>
-                        <a class="button" href="./mon-histoire.html">Mon Histoire</a>
+                        <a class="button" href="./pages/mon-histoire.html">Mon Histoire</a>
                         <a class="button" href="#contact">Me Contacter</a>
-                        <a class="button" href="./categories.html">Tarifs</a>
+                        <a class="button" href="./pages/categories.html">Tarifs</a>
                     </div>
 
                 </div>
