--- a/pages/mon-histoire.html
+++ b/pages/mon-histoire.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lili Photo</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="./css/mon-histoire.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/mon-histoire.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -26,7 +26,7 @@
 
                 <div class="row">
 
-                    <img src="./assets/images/lili.png" alt="Image de la photographe">
+                    <img src="../assets/images/lili.png" alt="Image de la photographe">
                     <div class="right-side col">
 
                         <p>
@@ -58,7 +58,7 @@
                             réaliser vos envies.
                             Je suis à l’écoute de tous vos projets…
                         </p>
-                        <a href="./accueil.html" class="button">← Retour</a>
+                        <a href="../accueil.html" class="button">← Retour</a>
 
                     </div>
 
@@ -67,7 +67,7 @@
         </div>
     </main>
 
-    <script defer type="text/javascript" src="./script.js"></script>
+    <script defer type="text/javascript" src="../script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
