--- a/pages/categories.html
+++ b/pages/categories.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lili Photo</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="./css/tarifs.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/tarifs.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
@@ -28,33 +28,33 @@
 
                         <aside class="card-wrapper row">
 
-                            <div class="card col">
+                            <div class="card col" onclick="moveTo('./tarifs/enfant.html')">
                                 <div class="layer"></div>
-                                <img src="./assets/images/baby.png" alt="Image de déscription du tarif">
+                                <img src=".././assets/images/baby.png" alt="Image de déscription du tarif">
                                 <span class="title">Bébé / Enfant</span>
                             </div>
 
                             <div class="card col">
                                 <div class="layer"></div>
-                                <img src="./assets/images/portrait.png" alt="Image de déscription du tarif">
+                                <img src=".././assets/images/portrait.png" alt="Image de déscription du tarif">
                                 <span class="title">Portraits</span>
                             </div>
 
                             <div class="card col">
                                 <div class="layer"></div>
-                                <img src="./assets/images/mariage.png" alt="Image de déscription du tarif">
+                                <img src=".././assets/images/mariage.png" alt="Image de déscription du tarif">
                                 <span class="title">Mariage</span>
                             </div>
 
                             <div class="card col">
                                 <div class="layer"></div>
-                                <img src="./assets//images/grossesse.png" alt="Image de déscription du tarif">
+                                <img src=".././assets//images/grossesse.png" alt="Image de déscription du tarif">
                                 <span class="title">Grosesse</span>
                             </div>
 
                         </aside>
 
-                        <a href="./accueil.html" class="button">← Retour</a>
+                        <a href=".././accueil.html" class="button">← Retour</a>
 
                     </div>
 
@@ -63,7 +63,7 @@
         </div>
     </main>
 
-    <script defer type="text/javascript" src="./script.js"></script>
+    <script defer type="text/javascript" src="../script.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init({
