--- a/pages/categories.html
+++ b/pages/categories.html
@@ -34,19 +34,19 @@
                                 <span class="title">Bébé / Enfant</span>
                             </div>
 
-                            <div class="card col">
+                            <div class="card col" onclick="moveTo('./tarifs/portrait.html')">
                                 <div class="layer"></div>
                                 <img src=".././assets/images/portrait.png" alt="Image de déscription du tarif">
                                 <span class="title">Portraits</span>
                             </div>
 
-                            <div class="card col">
+                            <div class="card col" onclick="moveTo('./tarifs/mariage.html')">
                                 <div class="layer"></div>
                                 <img src=".././assets/images/mariage.png" alt="Image de déscription du tarif">
                                 <span class="title">Mariage</span>
                             </div>
 
-                            <div class="card col">
+                            <div class="card col" onclick="moveTo('./tarifs/grossesse.html')">
                                 <div class="layer"></div>
                                 <img src=".././assets//images/grossesse.png" alt="Image de déscription du tarif">
                                 <span class="title">Grosesse</span>
