--- a/accueil.html
+++ b/accueil.html
@@ -65,7 +65,7 @@
                 <h3 data-aos="fade-in" data-aos-delay="500" data-aos-easing="ease-in" style="cursor: pointer;">Lili Photo</h3>
                 <div class="image-container">
                     <img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out" class="left-side"
-                        src="./assets/images/lili.png" alt="Photo de profile du photographe Aurélie Lhuillier">
+                        src="./assets/images/lili.webp" alt="Photo de profile du photographe Aurélie Lhuillier">
                 </div>
 
                     <div data-aos="fade-in" data-aos-delay="900" data-aos-easing="ease-in-out"
@@ -85,63 +85,63 @@
                 <h2>Galeries</h2>
                 <ul>
                     <li>
-                        <img src="./assets/images/1.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/1.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
 
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/katia.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/katia.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/claudia.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/claudia.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/6.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/6.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/7.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/7.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/can.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/can.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/enfant2.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/enfant2.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/4.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/4.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/11.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/11.webp" alt="Image de présentation du travail du photographe">
                     </li>
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/9.jpg" alt="Image de présentation du travail du photographe">
-                    </li>
-
-                    <li>
-                        <div class="layer"></div>
-                        <img src="./assets/images/8.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/9.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                     <li>
                         <div class="layer"></div>
-                        <img src="./assets/images/enfant1.jpg" alt="Image de présentation du travail du photographe">
+                        <img src="./assets/images/8.webp" alt="Image de présentation du travail du photographe">
+                    </li>
+
+                    <li>
+                        <div class="layer"></div>
+                        <img src="./assets/images/enfant1.webp" alt="Image de présentation du travail du photographe">
                     </li>
 
                 </ul>
