--- a/pages/tarifs/enfant.html
+++ b/pages/tarifs/enfant.html
@@ -32,7 +32,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/baby.png" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/baby.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -59,7 +59,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/enfant2.jpg" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/enfant2.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
