--- a/pages/tarifs/portrait.html
+++ b/pages/tarifs/portrait.html
@@ -31,7 +31,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/portrait.png" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/portrait.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -55,7 +55,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/portrait2.jpg" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/portrait2.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
