--- a/pages/categories.html
+++ b/pages/categories.html
@@ -30,25 +30,25 @@
 
                             <div class="card col" onclick="moveTo('./tarifs/enfant.html')">
                                 <div class="layer"></div>
-                                <img src=".././assets/images/baby.png" alt="Image de déscription du tarif">
+                                <img src=".././assets/images/baby.webp" alt="Image de déscription du tarif">
                                 <span class="title">Bébé / Enfant</span>
                             </div>
 
                             <div class="card col" onclick="moveTo('./tarifs/portrait.html')">
                                 <div class="layer"></div>
-                                <img src=".././assets/images/portrait.png" alt="Image de déscription du tarif">
+                                <img src=".././assets/images/portrait.webp" alt="Image de déscription du tarif">
                                 <span class="title">Portraits</span>
                             </div>
 
                             <div class="card col" onclick="moveTo('./tarifs/mariage.html')">
                                 <div class="layer"></div>
-                                <img src=".././assets/images/mariage.png" alt="Image de déscription du tarif">
+                                <img src=".././assets/images/mariage.webp" alt="Image de déscription du tarif">
                                 <span class="title">Mariage</span>
                             </div>
 
                             <div class="card col" onclick="moveTo('./tarifs/grossesse.html')">
                                 <div class="layer"></div>
-                                <img src=".././assets//images/grossesse.png" alt="Image de déscription du tarif">
+                                <img src=".././assets//images/grossesse.webp" alt="Image de déscription du tarif">
                                 <span class="title">Grosesse</span>
                             </div>
 
