--- a/pages/tarifs/grossesse.html
+++ b/pages/tarifs/grossesse.html
@@ -31,7 +31,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/grossesse2.jpg" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/grossesse2.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -57,7 +57,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/grossesse.png" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/grossesse.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -80,7 +80,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/grossesse.png" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/grossesse.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
