--- a/pages/tarifs/mariage.html
+++ b/pages/tarifs/mariage.html
@@ -31,7 +31,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/mariage.png" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/mariage.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
@@ -57,7 +57,7 @@
                             <div class="tar-card col">
 
                                 <div class="image-container">
-                                    <img src="../../assets/images/mariage bonus.jpg" alt="Image de déscription du tarif">
+                                    <img src="../../assets/images/mariage bonus.webp" alt="Image de déscription du tarif">
                                 </div>
 
                                 <div class="content">
