--- a/accueil.html
+++ b/accueil.html
@@ -3,6 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Aurélie Lhuillier Photographe professionnel">
+    <meta name="keywords" content="photo, photographe, shoot, shooting, aurélue, lhuiller, séance photo">
+    <meta name="author" content="Aurélie Lhuiller">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>Lili Photo</title>
