--- a/accueil.html
+++ b/accueil.html
@@ -69,6 +69,10 @@
                 <div class="image-container">
                     <img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out" class="left-side"
                         src="./assets/images/lili.webp" alt="Photo de profile du photographe Aurélie Lhuillier">
+
+                        <!-- Mobile image -->
+                        <img data-aos="fade-in" data-aos-delay="800" data-aos-easing="ease-in-out" id="mobile-image" class="left-side"
+                        src="./assets/images/lisa color.webp" alt="Photo de profile du photographe Aurélie Lhuillier">
                 </div>
 
                     <div data-aos="fade-in" data-aos-delay="900" data-aos-easing="ease-in-out"
