--- a/pages/mon-histoire.html
+++ b/pages/mon-histoire.html
@@ -37,24 +37,23 @@
                             1800 à nos jours, j’ai appris les effets spéciaux et la fabrication de perruques.
                             Arrivée dans le var, j’ai travaillé dans le médical tout en continuant mon métier de
                             maquilleuse,
-                            coiffeuse pour les mariages ou occasionnellement à l’opéra de Toulon.
-                            J’aime la photographie depuis des années et dernièrement j’ai décidé de ma lancer en tant que
-                            professionnel et j’ai donc suivi une formation à l’école FORMA PHOTO PACA au Lavandou.
-                            C’était mon rêve de devenir photographe et de pouvoir vivre de ma passion. J’aime l’histoire qui
-                            se
-                            cache derrière les photos et rappelle immédiatement l’esprit de ce moment figé.
-                            Les photos de famille, bébé, mariage, les paysages, les animaux, sont des instants de bonheurs
+                            coiffeuse pour les mariages et occasionnellement à l’opéra de Toulon.
+                            Passionnée de photographie, j’ai décidé de ma lancer en tant que professionnelle. J’ai donc
+                            suivi une
+                            formation à l’école FORMA PHOTO PACA au Lavandou.
+                            C’était mon rêve de devenir photographe et de pouvoir vivre de ma passion. J’aime l’histoire
                             qui se
-                            partage et pour lequel on laisse une trace pour les générations à venir.
-                            Des photos de bonheur mais également des photos de tristesse ou j’accompagne des familles pour
-                            des fins de vies, des moments particuliers que certains veulent garder.
-                            La photo est une technologie incroyable, cette boîte magique qui saisit tant d’émotions, c’est
-                            la
-                            magie que je souhaite faire ressortir dans mon travail, mon travail de prise de vue, de retouche
-                            et de
+                            cache derrière les photos et rappelle immédiatement l’esprit de ce moment figé.
+                            Les photos de familles, bébés, mariages, paysages, animaux, sont des instants de bonheur qui
+                            se
+                            partagent et pour lesquels je souhaite laisser une trace pour les générations à venir.
+                            La photo est une technologie incroyable, cette boîte magique qui saisit tant d’émotions,
+                            c’est la
+                            magie que je souhaite faire ressortir dans mon travail, mon travail de prise de vue, de
+                            retouche et de
                             création.
-                            Je peux vous aider à aller jusqu’au bout de vos projets en cumulant mes deux métiers, je vous
-                            aide à
+                            Je peux vous aider à aller jusqu’au bout de vos projets en cumulant mes deux métiers, je
+                            vous aide à
                             réaliser vos envies.
                             Je suis à l’écoute de tous vos projets…
                         </p>
